--- a/spring-cloud-config-git/spring-cloud-config-server/src/main/resources/application.yml
+++ b/spring-cloud-config-git/spring-cloud-config-server/src/main/resources/application.yml
@@ -10,4 +10,4 @@ spring:
           uri: https://github.com/ityouknow/spring-cloud-starter/ # 配置git仓库的地址
           search-paths: config-repo  # git仓库地址下的相对地址，可以配置多个，用,分割。
           username: firedrgon # git仓库的账号
-          password: github1335542278
+          password: xxx
